# csc-8503

./: CMakeLists.txt  CMakeSettings.json  cmake_install.cmake
Assets/Meshes/: 19463_Kitten_Head_v1.mat  19463_Kitten_Head_v1.msh  FishEmojiRecreation.mat  FishEmojiRecreation.msh  Kitten.msh  ORIGAMI_Chat.mat  ORIGAMI_Chat.msh  cat.msh
Assets/Shaders/: Debug.frag  Debug.vert  scene.frag
Assets/Shaders/VK/: DebugTexture.frag  DebugTexture.vert
CSC8503/: CMakeLists.txt  GameTechRenderer.cpp  GameTechRenderer.h  GameTechRendererInterface.h  GameTechVulkanRenderer.cpp  GameTechVulkanRenderer.h  Main.cpp  NetworkPlayer.h  NetworkedGame.cpp  NetworkedGame.h  StateGameObject.cpp  StateGameObject.h  TestGrid1.txt  TutorialGame.cpp  TutorialGame.h  cmake_install.cmake
CSC8503CoreClasses/: AABBVolume.h  CMakeLists.txt  CapsuleVolume.h  CollisionDetection.cpp  CollisionDetection.h  CollisionVolume.h  Constraint.h  Debug.cpp  Debug.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  NavigationGrid.cpp  NavigationMap.h  NavigationPath.h  OBBVolume.h  OrientationConstraint.cpp  OrientationConstraint.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  PositionConstraint.cpp  PositionConstraint.h  PushdownMachine.cpp  PushdownMachine.h  QuadTree.h  Ray.h  RenderObject.cpp  RenderObject.h  SphereVolume.h  State.h  StateMachine.h  StateTransition.h  Transform.cpp  Transform.h  cmake_install.cmake
GLTFLoader/: GLTFLoader.cpp  GLTFLoader.h
NCLCoreClasses/: CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  Frustum.cpp  Frustum.h  Maths.cpp  Maths.h  Matrix.h  Mesh.cpp  Mesh.h  MeshAnimation.cpp  MeshAnimation.h  MeshMaterial.cpp  MeshMaterial.h  Mouse.h  MshLoader.cpp  MshLoader.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  RendererBase.h  SimpleFont.cpp  SimpleFont.h  Texture.h  TextureLoader.cpp  TextureLoader.h  Vector.h  Win32Mouse.cpp  Win32Window.cpp  Win32Window.h  Window.cpp  Window.h
OpenGLRendering/: CMakeLists.txt  OGLBuffer.h  OGLMesh.cpp  OGLRenderer.cpp  OGLRenderer.h  OGLShader.cpp  OGLShader.h  OGLTexture.cpp  OGLTexture.h  cmake_install.cmake
VulkanRendering/: .gitignore  CMakeLists.txt  SmartTypes.h  VulkanBVHBuilder.cpp  VulkanBVHBuilder.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanBufferBuilder.cpp  VulkanBufferBuilder.h  VulkanComputePipelineBuilder.cpp  VulkanComputePipelineBuilder.h  VulkanDescriptorBufferWriter.h  VulkanDescriptorSetBinder.h  VulkanDescriptorSetLayoutBuilder.cpp  VulkanDescriptorSetLayoutBuilder.h  VulkanDescriptorSetWriter.h  VulkanDynamicRenderBuilder.cpp  VulkanDynamicRenderBuilder.h  VulkanMemoryManager.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPipeline.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanPipelineBuilderBase.h  VulkanRayTracingPipelineBuilder.cpp  VulkanRayTracingPipelineBuilder.h  VulkanRenderPassBuilder.cpp  VulkanRenderPassBuilder.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShaderBindingTableBuilder.cpp  VulkanShaderBindingTableBuilder.h  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTextureBuilder.cpp  VulkanTextureBuilder.h  VulkanUtils.cpp  (+3 more)
x64/Debug/: highscore.txt
